--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,16 @@
   <title>Spotify Auth API</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Montserrat+Subrayada|Raleway&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="src/styles.css">
+  <script src="src/main.js" charset="utf-8"></script>
 </head>
+
 <body>
   <!-- <div id="log-in">
          <iframe scrolling="no" frameborder="0" src="https://editor.p5js.org/elizasohn/embed/yw8d5gSI8" width: "100%" height: "100%"></iframe> -->
     <!-- <h1>Create a playlist</h1> -->
 
-    <button id="logInBtn" class="btn btn-default" type="button" name="button"><a href="https://accounts.spotify.com/authorize?client_id=659f2e7b21a94d6a9ea765d559fa58a4&redirect_uri=http://https://wymerkd.github.io/spotify-playlist-generator/src/&scope=user-read-private%20user-read-email&response_type=token&state=123">Start</a>
+    <button id="logInBtn" class="btn btn-default" type="button" name="button"><a href="https://accounts.spotify.com/authorize?client_id=659f2e7b21a94d6a9ea765d559fa58a4&redirect_uri=http://localhost:8080&scope=user-read-private%20user-read-email&response_type=token&state=123">Start</a>
     </a></button>
   </div>
 
