--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
          <iframe scrolling="no" frameborder="0" src="https://editor.p5js.org/elizasohn/embed/yw8d5gSI8" width: "100%" height: "100%"></iframe> -->
     <!-- <h1>Create a playlist</h1> -->
 
-    <button id="logInBtn" class="btn btn-default" type="button" name="button"><a href="https://accounts.spotify.com/authorize?client_id=659f2e7b21a94d6a9ea765d559fa58a4&redirect_uri=https://spotify-playlist-generator.netlify.com/">Start</a>
+    <button id="logInBtn" class="btn btn-default" type="button" name="button"><a href="https://accounts.spotify.com/authorize?client_id=659f2e7b21a94d6a9ea765d559fa58a4&redirect_uri=https://spotify-playlist-generator.netlify.com&scope=user-read-private%20user-read-email&response_type=token&state=123">Start</a>
     </a></button>
   </div>
 
