--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,11 @@
          <iframe scrolling="no" frameborder="0" src="https://editor.p5js.org/elizasohn/embed/yw8d5gSI8" width: "100%" height: "100%"></iframe> -->
     <!-- <h1>Create a playlist</h1> -->
 
-    <button id="logInBtn" class="btn btn-default" type="button" name="button"><a href="https://accounts.spotify.com/authorize?client_id=659f2e7b21a94d6a9ea765d559fa58a4&redirect_uri=http://localhost:8080&scope=user-read-private%20user-read-email&response_type=token&state=123">Start</a>
+    <button id="logInBtn" class="btn btn-default" type="button" name="button"><a href="https://accounts.spotify.com/authorize?client_id=659f2e7b21a94d6a9ea765d559fa58a4&redirect_uri=https://spotify-playlist-generator.netlify.com/#access_token=BQDvhhwvIPlSLJxxn0mxxOm9FugT8TuhTlZ3peQZDXa42dnNjJ6_wOJz3R9roKJEt5iixzgnUyKMwj6Uuuadeo5ameAohS1AJFKX_f9CA4oZ2t_ZVI0Ip3u7HngGJ-rubloX7i3tpEqDV5mcro_rHO9iy1k&token_type=Bearer&expires_in=3600&state=123">Start</a>
     </a></button>
   </div>
+
+https://spotify-playlist-generator.netlify.com/#access_token=BQDvhhwvIPlSLJxxn0mxxOm9FugT8TuhTlZ3peQZDXa42dnNjJ6_wOJz3R9roKJEt5iixzgnUyKMwj6Uuuadeo5ameAohS1AJFKX_f9CA4oZ2t_ZVI0Ip3u7HngGJ-rubloX7i3tpEqDV5mcro_rHO9iy1k&token_type=Bearer&expires_in=3600&state=123
 
   <div id="genreBoxes">
     <div class="flex-container">
