--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <title>Spotify Auth API</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Montserrat+Subrayada|Raleway&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="src/styles.css">
-  <script src="src/main.js" charset="utf-8"></script>
+  <link rel="stylesheet" href="styles.css">
+  <script src="main.js" charset="utf-8"></script>
 </head>
 
 <body>
